# FA_Bookings

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: config.py  database.py  exeptions.py  main.py
app/admin/: auth.py  views.py
app/api/: auth.py  bookings.py  dependencies.py  hotels.py  rooms.py  users.py
app/bookings/: __init__.py  bookings_model.py  dao.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: __init__.py  dao.py  hotels_model.py  router.py  schemas.py
app/hotels/rooms/: __init__.py  dao.py  rooms_model.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 880bcbc76d21_add_booking_users_rooms.py  9d54e9444252_add_hotels.py  c3d71329e036_add_name_in_users.py
app/models/: bookings.py  hotels.py  rooms.py  users.py
app/pages/: router.py
app/repositories/: bookings.py  hotels.py  rooms.py  users.py
app/schemas/: hotels.py  rooms.py  users.py
app/services/: bookings.py  hotels.py  rooms.py  users.py
app/static/: style.css
app/static/images/: router.py
app/tasks/: conf_celery.py  email_teplates.py  scheduled.py  tasks.py
app/templates/: auth.html  hotels.html
app/tests/: conftest.py
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_users/: test_api.py
app/tests/unit_tests/test_users/: test_api.py  test_dao.py
app/users/: auth.py  dao.py  dependencies.py  router.py  schemas.py  user_model.py
app/utils/: booking_util.py  repository.py
docker/: start_flower.sh
